--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Store - Каталог</title>
+    <title>{{ title }}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -93,7 +93,11 @@
             </div>
 
             <div class="row">
-
+                {% for product in products %}
+                    {{ product.name }}
+                    {{ product.price }}
+                {% endfor %}
+                
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
                         <a href="#">
